# llm-evaluation

./: # Code Citations.md  .env.example  .env.openai-via-or.example  .env.openai.example  .env.prod.template  .gitignore  Dockerfile  PROJE_OZET.md  RAG_EVAL_TOOL_PLAN.md  README.md  SYSTEM_DOCUMENTATION.md  TAKIM_REHBERI.md  alembic.ini  docker-compose.dev.yml  docker-compose.openai-via-or.yml  docker-compose.openai.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  requirements.txt
.github/workflows/: ci.yml  publish.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_context_metrics.py  0002_rag_metrics.py  0003_add_completeness_key_points.py  0005_add_hallucination_claims.py  0006_multi_agent_eval.py  0007_add_faithfulness_to_steps.py  0008_add_content_hash_cache.py  0009_add_token_tracking.py  0010_add_webhook_url.py  0011_add_cascade_delete_and_updated_at.py  0012_add_evaluation_duration_ms.py
app/: config.py  database.py  exceptions.py  main.py  rate_limit.py
app/evaluation/: __init__.py  client_provider.py  evaluator.py  json_utils.py  llm_client.py  llm_protocol.py  prompt_utils.py  prompts.py  rag_metrics.py
app/metrics/: definitions.py
app/middleware/: auth.py
app/models/: __init__.py  evaluation.py  trace.py  user.py
app/routers/: auth.py  ingest.py  metrics.py  traces.py
app/schemas/: __init__.py  auth.py  ingest.py  trace.py  validators.py
app/services/: auth_service.py  evaluation_result_mapper.py  evaluation_service.py  ingest_service.py  webhook_service.py
docs/: AB_REPORT_INFRA_PARITY.md  AB_REPORT_QWEN_VS_OPENAI.md  AB_SUMMARY_3WAY.md  COMPARE_MODELS.md  COST_QUALITY_STRATEGY.md  DECISION_BRIEF.md  Entegrasyon Rehberi.md  METRIC_REFERENCE.md  MODEL_SELECTION_GUIDE.md  TEST_LOG.md
pgadmin/: servers.json
reports/: adversarial_benchmark_report.md  adversarial_results_v2.json  all_metrics_validation_report_2026-02-20.md  architecture_fixes_documentation.md  architecture_review_report.md  benchmark_results.json  benchmark_results_fix.json  day1_migration_issue_report.md  evaluation_speed_optimization.md  fullmetric_reliability_report_2026-02-20.md  stage2_fix_report.md  tool_validation_labeled_report_2026-02-20.md  trace_batch_evaluation_2026-02-20.md
scripts/: benchmark_hallucination_approaches.py  build_adversarial_dataset.py  build_benchmark_dataset.py  check_api_key.py  check_openai_api_key.py  check_openai_models_access.py  compare_models.py  generate_ab_report.py  generate_infra_parity_report.py  ingest_benchmark_dataset.py  run_independent_benchmark.py  start_api.sh
sdk/: README.md  pyproject.toml  rageval_callback.py
sdk/src/rageval_sdk/: __init__.py  _config.py  _engine.py  _evaluator.py  _llm_client.py  _prompt_utils.py  _prompts.py  _rag_metrics.py  callback.py  client.py
tests/: e2e_docker_scenarios.sh  regression_trace_suite.json  test_auth_service.py  test_evaluation_service.py  test_evaluator.py  test_rag_metrics.py  test_schemas.py
(+4 files in other folders)
