[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rageval-ai"
version = "0.2.0"
description = "Standalone RAG evaluation library — run LLM-as-judge evaluation locally with your own API key"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {email = "syorgun891@gmail.com"},
]
keywords = ["rag", "evaluation", "llm", "ai", "hallucination", "faithfulness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/CYBki/llm-evaluation"
Repository = "https://github.com/CYBki/llm-evaluation"
Issues = "https://github.com/CYBki/llm-evaluation/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rageval_sdk"]
